Bug 1583110, freeze/thaw in a separate step, r=peterv a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D129701